<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical"
    tools:ignore="ExtraText">


    <TextView
        android:background="@color/s111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/注册"
        android:textSize="70sp"
        android:gravity="center"/>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>
    <!--居中放置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="头像" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_shape"
                android:src="@drawable/illust_106257046_20230403_090615"
                 />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/selectImg"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="更换头像"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent">

        <TextView
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/昵称" />

        <EditText
            android:id="@+id/TextNickName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:autofillHints=""
            android:ems="30"
            android:hint="@string/请输入昵称"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_email_login" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:autofillHints=""
            android:ems="30"
            android:hint="@string/邮箱提示信息"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent">
        <TextView
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/TextLoginPassword" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/密码提示信息"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields" />

    </LinearLayout>


    <Button
        android:id="@+id/AAWSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/注册"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />


    <CheckBox
        android:id="@+id/allowAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/allowAll" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/textVid"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/vid"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/updateVid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateVid"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/allowSp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1.3"
            android:text="@string/在本地同步执行数据"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>