<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp"
    android:background="@color/blue"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="UselessParent">
    <ImageView
        android:scaleType="centerCrop"
        android:background="@drawable/circle_shape"
        android:id="@+id/userImger"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/加载失败"
  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/user_nickname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/user_toall" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>