<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.chatActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        tools:ignore="MissingConstraints,UselessParent">
        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"/>
    <ImageView
        android:scaleType="centerCrop"
        android:background="@drawable/circle_shape"
        android:id="@+id/youImger"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/加载失败"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/user_nickname" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/user_toall" />
    </LinearLayout>
        <Button
            android:id="@+id/chatAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="刷新"/>
        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <ListView
        android:id="@+id/chatShow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:rotationX="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chatMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="请输入信息"
            android:minHeight="48dp" />
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sentChatMsg"
            android:text="发送"/>
    </LinearLayout>
</LinearLayout>